criando migration para inserir informação no banco

--- a/algamoney-api/pom.xml
+++ b/algamoney-api/pom.xml
@@ -43,8 +43,12 @@
 			<artifactId>mysql-connector-java</artifactId>
 			<scope>compile</scope>
 		</dependency>
+		<!-- Migracoes - Flyaway -->
+		<dependency>
+	    <groupId>org.flywaydb</groupId>
+	    <artifactId>flyway-mysql</artifactId>
+		</dependency>
 	</dependencies>
-
 	<build>
 		<plugins>
 			<plugin>
